--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/JOSProjects/IMDb-Movie-Bot",
-    "repository": "https://github.com/JOSProjects/IMDb-Movie-Bot",
+    "website": "https://github.com/dktest2/IMDB-Autofilter-Link-Shortener-bot2",
+    "repository": "https://github.com/dktest2/IMDB-Autofilter-Link-Shortener-bot2",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -75,7 +75,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "eco"
         }
     }
 }
